crates/uitest/fixtures/mir_check/borrowck_set_discriminant_under_ref.snap
---
source: crates/uitest/tests/mir_check.rs
assertion_line: 32
expression: res
input_file: fixtures/mir_check/borrowck_set_discriminant_under_ref.fe
---
error[10-0002]: borrow conflict in `fn borrowck_set_discriminant_under_ref`
   ┌─ borrowck_set_discriminant_under_ref.fe:11:5
   │
10 │     let r: ref Flag = ref flag
   │                           ---- `flag` is borrowed here
11 │     flag = Flag::On
   │     ^^^^^^^^^^^^^^^ cannot write through an active `ref` borrow
